Fix SVG not showing on mobile browsers

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,7 @@ html {
   color: #FFF;
   padding: 0;
   margin: 0;
-  font-family: "Quicksand", sans-serif;
+  /*font-family: "Quicksand", sans-serif;*/
 }
 
 body {
